--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <!-- Hero Section -->
-<section class="hero text-white text-center py-5" style="background-image: url('{% static 'main/images/rhyno_final.png' %}'); background-size: cover; background-position: center; background-color: #000; background-blend-mode: overlay; color: #fff;">
+<section class="hero text-white text-center py-5" style="background-image: url('{% static 'https://raw.githubusercontent.com/rhyno-ev/website-resources/main/images/HomePage/Rhyno-Logo.png' %}'); background-size: cover; background-position: center; background-color: #000; background-blend-mode: overlay; color: #fff;">
     <div class="overlay py-5" style="background: rgba(0, 0, 0, 0.5);">
         <div class="container">
             <h1 class="display-4 font-weight-bold" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);">Welcome to RHYNO EV</h1>
